[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwdusage"
version = "v1.0.1"
authors = [
  {name="BuongiornoTexas"},
]
description = "Usage (mainly time of use) proxy microservice for Powerwall-Dashboard."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "simplejson",
    "influxdb-client[extra]"
]

[project.urls]
"Homepage" = "https://github.com/BuongiornoTexas/pwdusage"
"Bug Tracker" = "https://github.com/BuongiornoTexas/pwdusage/issues"